Fix build compatibility for Java 17
Co-authored-by: RonnieJakobsgaard <38299483+RonnieJakobsgaard@users.noreply.github.com>